# temporal-io-experiments

./: .env.example  .gitignore  CONTRIBUTE.md  README.md  WEBHOOK_IMPLE.md  auth_code.py  direct_gdt_integration.py  original_crawl.py  pyproject.toml  sample_discovery_payload.json  sample_invoice_payload.json
app/: config.py  main.py  models.py
app/data/events/unknown/: 20251013T125003Z_discovery.completed_2.json  20251013T125004Z_fetch.completed_10.json  20251013T125004Z_fetch.completed_4.json  20251013T125004Z_fetch.completed_7.json  20251013T125004Z_fetch.completed_8.json  20251013T125004Z_fetch.completed_9.json  (+1035 more)
deployment/: Dockerfile.api  Dockerfile.worker  cloud-run-job.yaml  deploy-burst.sh  deploy-to-gcp.sh  docker-compose.yml  init-db.sql  setup-compute-engine.sh
docs/: DEPLOYMENT.md  LOCAL_SETUP.md  MIGRATION_PLAN.md  SCHEDULING_API.md  SYSTEM_ARCHITECTURE.md
scripts/: create_daily_schedule.py  summarize_invoices.py
temporal_app/: __init__.py  models.py  worker.py
temporal_app/activities/: __init__.py  events.py  gdt_auth.py  gdt_discovery.py  gdt_excel_discovery.py  gdt_fetch.py  hooks.py
temporal_app/activities/common/: browser.py
temporal_app/activities/entity_lookup/: __init__.py  entity_lookup.py  thuvien_activity.py
temporal_app/activities/gdt_invoices_import/: __init__.py  gdt_auth.py
temporal_app/interceptors/: __init__.py
temporal_app/interceptors/lark/: client.py  notifier.py  notify_activity.py
temporal_app/workflows/: __init__.py  entity_lookup.py  gdt_invoice_import.py
tests/: test_company_lookup_flows.py  test_gdt_flows.py
